# slpcli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LEARN.md  README.md  build_releases.sh  machin.json  release.sh  run.sh  run_debug.sh  slpcliConfig.h.in
arch-pkg/: PKGBUILD
json_errors/: ServerJavaError.json  ServerJavaError2.json  yay.json
libs/slp/: CMakeLists.txt
libs/slp/include/: logger.hpp  slp.h
libs/slp/src/: Connection.cpp  Connection.h  DataTypesUtils.cpp  DataTypesUtils.h  Dispatcher.cpp  Dispatcher.h  logger.hpp  slp.cpp
slp/: CMakeLists.txt
slp/include/: slp.h
slp/src/: DataTypesUtils.cpp  slp.cpp
src/: DataTypesUtils.cpp  DataTypesUtils.h  Mcping.cpp  Mcping.h  main.cpp  slp.cpp  slp.h
